# truth-social-comment-scraper

./: LICENSE  README.md  popular-comments.csv  pyproject.toml  requirements.txt
data/: example-input.json  sample-output.json
docs/: usage-guide.md
src/: cli.py  main.py
src/config/: logging.conf  settings.example.json
src/storage/: csv_exporter.py  dataset_writer.py  json_exporter.py
src/truth_social/: client.py  comment_fetcher.py  comment_parser.py  init.py  pagination.py  rate_limiter.py
src/utils/: content_cleaner.py  filters.py  time_helpers.py
tests/: test_client.py  test_comment_parser.py  test_exporters.py  test_filters.py
